ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserUnaryExpression5/input.ts.stderr
error[2406]: Not a variable
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserUnaryExpression5/input.ts:1:4
  |
1 | ++ delete foo.bar
  |    ^^^^^^^^^^^^^^

